Fixed some gap inconsistencies

--- a/src/components/store/AddCartButton/style.module.scss
+++ b/src/components/store/AddCartButton/style.module.scss
@@ -21,7 +21,7 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    @media (max-width: 600px) {
+    @media (max-width: vars.$breakpoint-md) {
       gap: 0.75rem;
     }
 
