--- a/src/components/store/ItemHeader/style.module.scss
+++ b/src/components/store/ItemHeader/style.module.scss
@@ -12,7 +12,7 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  gap: 0.9rem;
+  gap: 1rem;
 
   h1 {
     @media (max-width: 600px) {
